@@ -127,7 +127,7 @@ public class TopicParser
         }
         else
         {
-            return stateMachine.parse(_dictionary,routingKey);
+            return stateMachine.parse(_dictionary, routingKey);
         }
     }
 
@@ -146,10 +146,10 @@ public class TopicParser
         if(wildCards == 0)
         {
             TopicMatcherDFAState[] states = new TopicMatcherDFAState[wordList.size()+1];
-            states[states.length-1] = new TopicMatcherDFAState(Map.of(), Collections.singleton(result));
+            states[states.length-1] = new TopicMatcherDFAState(Map.of(), Set.of(result));
             for(int i = states.length-2; i >= 0; i--)
             {
-                states[i] = new TopicMatcherDFAState(Collections.singletonMap(wordList.get(i),states[i+1]), Set.of());
+                states[i] = new TopicMatcherDFAState(Map.of(wordList.get(i),states[i+1]), Set.of());
 
             }
             return states[0];
@@ -157,7 +157,7 @@ public class TopicParser
         else if(wildCards == wordList.size())
         {
             Map<TopicWord,TopicMatcherDFAState> stateMap = new HashMap<>();
-            TopicMatcherDFAState state = new TopicMatcherDFAState(stateMap, Collections.singleton(result));
+            TopicMatcherDFAState state = new TopicMatcherDFAState(stateMap, Set.of(result));
             stateMap.put(TopicWord.ANY_WORD, state);
             return state;
         }
@@ -232,11 +232,11 @@ public class TopicParser
         // we approach this by examining steps of increasing length - so we
         // look how far we can go from the start position in 1 word, 2 words, etc...
 
-        Map<Set<Position>,SimpleState> stateMap = new HashMap<>();
+        Map<Set<Position>, SimpleState> stateMap = new HashMap<>();
 
 
         SimpleState state = new SimpleState();
-        state._positions = Collections.singleton( positions[0] );
+        state._positions = Set.of(positions[0]);
         stateMap.put(state._positions, state);
 
         calculateNextStates(state, stateMap, positions);
@@ -262,7 +262,7 @@ public class TopicParser
 
             if(endState)
             {
-                results = Collections.singleton(result);
+                results = Set.of(result);
             }
             else
             {
@@ -353,7 +353,7 @@ public class TopicParser
 
             if(loopingTerminal!=null)
             {
-                dest.setValue(Collections.singleton(loopingTerminal));
+                dest.setValue(Set.of(loopingTerminal));
             }
             else
             {
